--- a/email.html
+++ b/email.html
@@ -1,15 +1,12 @@
 <table style="color: #334155; font-family: Arial, Helvetica, sans-serif;">
   <tr>
     <td style="vertical-align: top;">
-      <img src="https://images.softer.design/taro.jpg" alt="Taro" width="96" style="border-radius: 50%;" />
+      <img src="https://images.softer.design/taro.webp" alt="Taro" style="border-radius: 50%; max-width: 6rem;" />
     </td>
-    <td width="256" style="vertical-align: top;">
+    <td style="vertical-align: top; max-width: 32ch;">
       <h1 style="margin: 0.5rem; font: bold 1.5rem Palatino, Georgia, 'Times New Roman', Times, serif;">Taro</h1>
       <p style="background: #f1f5f9; margin: 0.25rem; padding: 0.25rem 0.5rem; border-radius: 0.5rem;">
-        Hi! 👋 I'm Taro, your LX designer
-      </p>
-      <p style="background: #f1f5f9; margin: 0.25rem; padding: 0.25rem 0.5rem; border-radius: 0.5rem;">
-        Check out <a href="https://softer.design" style="color: #0284c7;">Softer Design</a>
+        Hi! 👋 I'm a learning experience designer at <a href="https://softer.design" style="color: #0284c7;">Softer Design</a>
       </p>
       <p style="background: #f1f5f9; margin: 0.25rem; padding: 0.25rem 0.5rem; border-radius: 0.5rem;">
         Feel free to reach out: 
@@ -18,7 +15,8 @@
       <p style="background: #f1f5f9; margin: 0.25rem; padding: 0.25rem 0.5rem; border-radius: 0.5rem;">
         Connect with me on 
         <a href="https://taroand.substack.com" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">Substack</a>, 
-        <a href="https://twitter.com/taronull" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">Twitter</a>, and 
+        <a href="https://twitter.com/taronull" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">Twitter</a>,  
+        <a href="https://www.instagram.com/_taronull/" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">Instagram</a>, and 
         <a href="https://www.linkedin.com/in/taronull/" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">LinkedIn</a>
       </p>
     </td>
