--- a/email.html
+++ b/email.html
@@ -6,17 +6,17 @@
     <td style="vertical-align: top; max-width: 32ch;">
       <h1 style="margin: 0.5rem; font: bold 1.5rem Palatino, Georgia, 'Times New Roman', Times, serif;">Taro</h1>
       <p style="background: #f1f5f9; margin: 0.25rem; padding: 0.25rem 0.5rem; border-radius: 0.5rem;">
-        Hi! 👋 I'm a learning experience designer at <a href="https://softer.design" style="color: #0284c7;">Softer Design</a>
+        Hi! &#x1F44B; I make learning experiences at <a href="https://softer.design" style="color: #0284c7;">Softer Design</a>
       </p>
       <p style="background: #f1f5f9; margin: 0.25rem; padding: 0.25rem 0.5rem; border-radius: 0.5rem;">
-        Feel free to reach out: 
+        Say hi: 
         <a href="mailto:taro@softer.design"  style="color: #0284c7;">taro@softer.design</a>
       </p>
       <p style="background: #f1f5f9; margin: 0.25rem; padding: 0.25rem 0.5rem; border-radius: 0.5rem;">
-        Connect with me on 
-        <a href="https://taroand.substack.com" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">Substack</a>, 
-        <a href="https://twitter.com/taronull" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">Twitter</a>,  
-        <a href="https://www.instagram.com/_taronull/" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">Instagram</a>, and 
+        Connect with me on my
+        <a href="https://taroand.substack.com" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">blog</a>, 
+        <a href="https://twitter.com/taronull" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">X</a>,  
+        <a href="https://www.instagram.com/_taronull/" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">IG</a>, and 
         <a href="https://www.linkedin.com/in/taronull/" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">LinkedIn</a>
       </p>
     </td>
