Update IG handle

--- a/email.html
+++ b/email.html
@@ -16,7 +16,7 @@
         Connect with me on my
         <a href="https://taroand.substack.com" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">blog</a>, 
         <a href="https://twitter.com/taronull" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">X</a>,  
-        <a href="https://www.instagram.com/_taronull/" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">IG</a>, and 
+        <a href="https://www.instagram.com/t_r_n_ll/" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">IG</a>, and 
         <a href="https://www.linkedin.com/in/taronull/" target="_blank" rel="noopener noreferrer"  style="color: #0284c7;">LinkedIn</a>
       </p>
     </td>
